fix layout bug for cards

--- a/src/components/UIElements/Cards.scss
+++ b/src/components/UIElements/Cards.scss
@@ -9,6 +9,10 @@
     position: relative;
   }
 
+  .MuiCardActionArea-root{
+    height: 100%;
+  }
+
   .MuiChip-root {
     margin: 4px 8px;
   }
